src/data/parser/.antlr/ComplexParser.js
// Generated from /home/mario/Documents/NODE.JS/domcol-js/data/parser/Complex.g4 by ANTLR 4.10.1
// jshint ignore: start
import antlr4 from 'antlr4';
import ComplexListener from './ComplexListener.js';
import ComplexVisitor from './ComplexVisitor.js';



const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.PredictionContextCache();

export default class ComplexParser extends antlr4.Parser {

    static grammarFileName = "Complex.g4";
    static literalNames = [ null, "'\\operatorname{Mandelbrot}'", "'i'", 
                            "'e'", "'\\'", "'pi'", "'sin'", "'cos'", "'tan'", 
                            "'cot'", "'sec'", "'csc'", "'sinh'", "'cosh'", 
                            "'tanh'", "'log'", "'ln'", "'Re'", "'Im'", "'\\operatorname{'", 
                            "'cis'", null, null, "'+'", "'-'", "'\\cdot'", 
                            "'\\frac'", "'^'", "'\\sqrt'", null, null, "'{'", 
                            "'}'", "','", "';'", "'='", "'@'" ];
    static symbolicNames = [ null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, "NUMBER", "CHAR", 
                             "PLUS", "MINUS", "TIMES", "DIVIDE", "POW", 
                             "SQRT", "LEFT", "RIGHT", "LEFT_BRACE", "RIGHT_BRACE", 
                             "COMA", "SEMICOLON", "EQUALS", "PLOTTED_FUNC", 
                             "WS", "LATEX_WS" ];
    static ruleNames = [ "parse", "assignment", "fractal", "addition", "multiplication", 
                         "fractionOrPower", "power", "atom", "num", "element" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = ComplexParser.ruleNames;
        this.literalNames = ComplexParser.literalNames;
        this.symbolicNames = ComplexParser.symbolicNames;

        /**
        * Creates a string that represents a function with two arguments.
        * Since more than two arguments can be given, the remaining arguments
        * are nested inside of the function. The result is a string that represents
        * the GLSL version of the expression (defined under `src/public/glsl/complexMath.glsl`).

        * Example: Parse the expression `2 + 4 + 6`
        * - start: `add(`
        * - delimiter: `, `
        * - end: `)`
        * - args: [2, 4, 6]
        * - result: `add(2, add(4, 6))`

        * @param start The starting expression
        * @param delimiter The separator for each element
        * @param end The ending expression
        * @param args An array of arguments for the function
        * @returns The equivalent string in GLSL
        */
        function group(start, delimiter, end, args) {
            if (args.length == 1) {
                return args[0];
            }
            return start + args[0] + delimiter + group(start, delimiter, end, args.slice(1)) + end;
        };

        // assigns the created functions to this object
        this.group = group;

        // The parsed lines to prepend to the start of the document
        this.tmpStart = [];

        // The lines of the parsed code in GLSL. They are merged later.
        this.tmp = [];

        // The parsed lines to append at the end of the document
        this.tmpEnd = [];

        this.variables = {};

        // The merged tmp array, i.e. the full GLSL code
        this.result = '';

    }

    get atn() {
        return atn;
    }



	parse() {
	    let localctx = new ParseContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, ComplexParser.RULE_parse);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 22;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case ComplexParser.CHAR:
	        case ComplexParser.PLOTTED_FUNC:
	            this.state = 20;
	            this.assignment();
	            break;
	        case ComplexParser.T__0:
	            this.state = 21;
	            this.fractal();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }

	                for (let key in this.variables) {
	                    this.tmpStart.push(`vec2 ${key} = ${this.variables[key]};`);
	                }
	                this.result = [
	                        this.tmpStart.join('\n'),
	                        this.tmp.join('\n'),
	                        this.tmpEnd.join('\n')
	                ].join('\n');
	            
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	assignment() {
	    let localctx = new AssignmentContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, ComplexParser.RULE_assignment);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 27;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===ComplexParser.PLOTTED_FUNC) {
	            this.state = 26;
	            localctx.isPlot = this.match(ComplexParser.PLOTTED_FUNC);
	        }

	        this.state = 29;
	        localctx.c = this.element();

	                let isFunction = false;
	                let variable = null;
	                let name = localctx.c.value;
	                let argument = null;
	            
	        this.state = 36;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===ComplexParser.LEFT) {
	            this.state = 31;
	            this.match(ComplexParser.LEFT);
	            this.state = 32;
	            localctx.c1 = this.element();
	            this.state = 33;
	            this.match(ComplexParser.RIGHT);

	                        isFunction = true;
	                        argument = localctx.c1.value;
	                    
	        }

	        this.state = 38;
	        this.match(ComplexParser.EQUALS);
	        this.state = 39;
	        localctx.a = this.addition();

	                let value = localctx.a.value;
	                if ((localctx.isPlot===null ? null : localctx.isPlot.text)) {
	                    this.tmpStart.push('vec2 colormode = vec2(0, 0);');
	                    this.tmpEnd.push(`
	                        vec2 plottedFunction(vec2 ${argument}_VAR) {
	                            return ${value};
	                        }
	                    `);
	                } else if (isFunction) {
	                    this.tmp.push(`
	                        vec2 ${name}C(vec2 ${argument}_VAR) {
	                            return ${value};
	                        }
	                    `);
	                } else {
	                    this.tmp.push(`vec2 ${name}_VAR = ${value};`);
	                }
	            
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	fractal() {
	    let localctx = new FractalContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, ComplexParser.RULE_fractal);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 42;
	        this.match(ComplexParser.T__0);

	                this.tmpStart.push('vec2 colormode = vec2(1, 0);');
	                this.tmpEnd.push(`
	                    vec2 plottedFunction(vec2 z) {
	                        return Mandelbrot(z);
	                    }
	                `);
	            
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	addition() {
	    let localctx = new AdditionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, ComplexParser.RULE_addition);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 46;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,3,this._ctx);
	        if(la_===1) {
	            this.state = 45;
	            localctx.pm1 = this._input.LT(1);
	            _la = this._input.LA(1);
	            if(!(_la===ComplexParser.PLUS || _la===ComplexParser.MINUS)) {
	                localctx.pm1 = this._errHandler.recoverInline(this);
	            }
	            else {
	            	this._errHandler.reportMatch(this);
	                this.consume();
	            }

	        }
	        this.state = 48;
	        localctx.m1 = this.multiplication();

	                let pm1 = ((localctx.pm1===null ? null : localctx.pm1.text) == null)? '+' : (localctx.pm1===null ? null : localctx.pm1.text);
	                let m1 = localctx.m1.value;
	                let product = [`multiplyC(vec2(${pm1}1.0, 0.0), ${m1})`];
	            
	        this.state = 56;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===ComplexParser.PLUS || _la===ComplexParser.MINUS) {
	            this.state = 50;
	            localctx.pm = this._input.LT(1);
	            _la = this._input.LA(1);
	            if(!(_la===ComplexParser.PLUS || _la===ComplexParser.MINUS)) {
	                localctx.pm = this._errHandler.recoverInline(this);
	            }
	            else {
	            	this._errHandler.reportMatch(this);
	                this.consume();
	            }
	            this.state = 51;
	            localctx.m2 = this.multiplication();

	                        let pm = (localctx.pm===null ? null : localctx.pm.text);
	                        let m = localctx.m2.value;
	                        product.push(`multiplyC(vec2(${pm}1.0, 0.0), ${m})`);
	                    
	            this.state = 58;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	         localctx.value =  this.group('addC(', ', ', ')', product) 
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	multiplication() {
	    let localctx = new MultiplicationContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, ComplexParser.RULE_multiplication);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 61;
	        localctx.p1 = this.fractionOrPower();
	         let powers = [localctx.p1.value]; 
	        this.state = 71;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,6,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                this.state = 64;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	                if(_la===ComplexParser.TIMES) {
	                    this.state = 63;
	                    this.match(ComplexParser.TIMES);
	                }

	                this.state = 66;
	                localctx.p2 = this.fractionOrPower();
	                 powers.push(localctx.p2.value);  
	            }
	            this.state = 73;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,6,this._ctx);
	        }

	         localctx.value =  this.group('multiplyC(', ', ', ')', powers) 
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	fractionOrPower() {
	    let localctx = new FractionOrPowerContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, ComplexParser.RULE_fractionOrPower);
	    try {
	        this.state = 88;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case ComplexParser.T__1:
	        case ComplexParser.T__2:
	        case ComplexParser.T__3:
	        case ComplexParser.T__18:
	        case ComplexParser.NUMBER:
	        case ComplexParser.CHAR:
	        case ComplexParser.PLUS:
	        case ComplexParser.MINUS:
	        case ComplexParser.SQRT:
	        case ComplexParser.LEFT:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 76;
	            localctx.p = this.power();
	             localctx.value =  localctx.p.value 
	            break;
	        case ComplexParser.DIVIDE:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 79;
	            this.match(ComplexParser.DIVIDE);
	            this.state = 80;
	            this.match(ComplexParser.LEFT_BRACE);
	            this.state = 81;
	            localctx.a1 = this.addition();
	            this.state = 82;
	            this.match(ComplexParser.RIGHT_BRACE);
	            this.state = 83;
	            this.match(ComplexParser.LEFT_BRACE);
	            this.state = 84;
	            localctx.a2 = this.addition();
	            this.state = 85;
	            this.match(ComplexParser.RIGHT_BRACE);

	                    let d1 = localctx.a1.value;
	                    let d2 = localctx.a2.value;
	                    localctx.value =  `divideC(${d1}, ${d2})`
	                
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	power() {
	    let localctx = new PowerContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, ComplexParser.RULE_power);
	    var _la = 0; // Token type
	    try {
	        this.state = 115;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case ComplexParser.T__1:
	        case ComplexParser.T__2:
	        case ComplexParser.T__3:
	        case ComplexParser.T__18:
	        case ComplexParser.NUMBER:
	        case ComplexParser.CHAR:
	        case ComplexParser.PLUS:
	        case ComplexParser.MINUS:
	        case ComplexParser.LEFT:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 90;
	            localctx.f1 = this.atom();
	             let args = [localctx.f1.value]; 
	            this.state = 104;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===ComplexParser.POW) {
	                this.state = 92;
	                this.match(ComplexParser.POW);
	                this.state = 98;
	                this._errHandler.sync(this);
	                switch(this._input.LA(1)) {
	                case ComplexParser.T__1:
	                case ComplexParser.T__2:
	                case ComplexParser.T__3:
	                case ComplexParser.T__18:
	                case ComplexParser.NUMBER:
	                case ComplexParser.CHAR:
	                case ComplexParser.PLUS:
	                case ComplexParser.MINUS:
	                case ComplexParser.LEFT:
	                    this.state = 93;
	                    localctx.f2 = this.atom();
	                    break;
	                case ComplexParser.LEFT_BRACE:
	                    this.state = 94;
	                    this.match(ComplexParser.LEFT_BRACE);
	                    this.state = 95;
	                    localctx.f2 = this.atom();
	                    this.state = 96;
	                    this.match(ComplexParser.RIGHT_BRACE);
	                    break;
	                default:
	                    throw new antlr4.error.NoViableAltException(this);
	                }

	                            let f = localctx.f2.value;
	                            args.push(f);
	                        
	                this.state = 106;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	             localctx.value =  this.group('powC(', ', ', ')', args) 
	            break;
	        case ComplexParser.SQRT:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 109;
	            this.match(ComplexParser.SQRT);
	            this.state = 110;
	            this.match(ComplexParser.LEFT_BRACE);
	            this.state = 111;
	            localctx.a = this.addition();
	            this.state = 112;
	            this.match(ComplexParser.RIGHT_BRACE);
	             localctx.value = `sqrtC(${localctx.a.value})` 
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	atom() {
	    let localctx = new AtomContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, ComplexParser.RULE_atom);
	    var _la = 0; // Token type
	    try {
	        this.state = 156;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,12,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 117;
	            localctx.c = this._input.LT(1);
	            _la = this._input.LA(1);
	            if(!(_la===ComplexParser.T__1 || _la===ComplexParser.T__2)) {
	                localctx.c = this._errHandler.recoverInline(this);
	            }
	            else {
	            	this._errHandler.reportMatch(this);
	                this.consume();
	            }
	             localctx.value =  (localctx.c===null ? null : localctx.c.text) + '_VAR' 
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 119;
	            this.match(ComplexParser.T__3);
	            this.state = 120;
	            localctx.c = this.match(ComplexParser.T__4);
	             localctx.value =  (localctx.c===null ? null : localctx.c.text) + '_VAR' 
	            break;

	        case 3:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 122;
	            this.match(ComplexParser.T__3);
	            this.state = 123;
	            localctx.f = this._input.LT(1);
	            _la = this._input.LA(1);
	            if(!((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << ComplexParser.T__5) | (1 << ComplexParser.T__6) | (1 << ComplexParser.T__7) | (1 << ComplexParser.T__8) | (1 << ComplexParser.T__9) | (1 << ComplexParser.T__10) | (1 << ComplexParser.T__11) | (1 << ComplexParser.T__12) | (1 << ComplexParser.T__13) | (1 << ComplexParser.T__14) | (1 << ComplexParser.T__15) | (1 << ComplexParser.T__16) | (1 << ComplexParser.T__17))) !== 0))) {
	                localctx.f = this._errHandler.recoverInline(this);
	            }
	            else {
	            	this._errHandler.reportMatch(this);
	                this.consume();
	            }
	            this.state = 124;
	            this.match(ComplexParser.LEFT);
	            this.state = 125;
	            localctx.a = this.addition();
	            this.state = 126;
	            this.match(ComplexParser.RIGHT);

	                    let funcName = (localctx.f===null ? null : localctx.f.text);
	                    let addition = localctx.a.value;
	                    localctx.value =  `${funcName}C(${addition})`
	                
	            break;

	        case 4:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 129;
	            this.match(ComplexParser.T__18);
	            this.state = 130;
	            localctx.f = this.match(ComplexParser.T__19);
	            this.state = 131;
	            this.match(ComplexParser.RIGHT_BRACE);
	            this.state = 132;
	            this.match(ComplexParser.LEFT);
	            this.state = 133;
	            localctx.a = this.addition();
	            this.state = 134;
	            this.match(ComplexParser.RIGHT);

	                    let operatorName = (localctx.f===null ? null : localctx.f.text);
	                    let operatorArg = localctx.a.value;
	                    localctx.value =  `${operatorName}C(${operatorArg})`
	                
	            break;

	        case 5:
	            this.enterOuterAlt(localctx, 5);
	            this.state = 137;
	            localctx.n = this.num();
	             localctx.value =  localctx.n.value 
	            break;

	        case 6:
	            this.enterOuterAlt(localctx, 6);
	            this.state = 140;
	            localctx.el = this.element();

	                    let isFunc = false;
	                    let name = localctx.el.value;
	                
	            this.state = 147;
	            this._errHandler.sync(this);
	            var la_ = this._interp.adaptivePredict(this._input,11,this._ctx);
	            if(la_===1) {
	                this.state = 142;
	                this.match(ComplexParser.LEFT);
	                this.state = 143;
	                localctx.a = this.addition();
	                this.state = 144;
	                this.match(ComplexParser.RIGHT);

	                            isFunc = true;
	                            let arg = localctx.a.value;
	                            localctx.value =  `${name}C(${arg})`
	                        

	            }

	                    if (!isFunc)
	                        localctx.value =  `${name}_VAR`
	                
	            break;

	        case 7:
	            this.enterOuterAlt(localctx, 7);
	            this.state = 151;
	            this.match(ComplexParser.LEFT);
	            this.state = 152;
	            localctx.a = this.addition();
	            this.state = 153;
	            this.match(ComplexParser.RIGHT);

	                    let arg = localctx.a.value;
	                    localctx.value =  `multiplyC(vec2(1.0, 0.0), ${arg})`
	                
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	num() {
	    let localctx = new NumContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, ComplexParser.RULE_num);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 159;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===ComplexParser.PLUS || _la===ComplexParser.MINUS) {
	            this.state = 158;
	            localctx.pm = this._input.LT(1);
	            _la = this._input.LA(1);
	            if(!(_la===ComplexParser.PLUS || _la===ComplexParser.MINUS)) {
	                localctx.pm = this._errHandler.recoverInline(this);
	            }
	            else {
	            	this._errHandler.reportMatch(this);
	                this.consume();
	            }
	        }

	        this.state = 161;
	        localctx.n = this.match(ComplexParser.NUMBER);

	                let pm = ((localctx.pm===null ? null : localctx.pm.text) == null)? '' : (localctx.pm===null ? null : localctx.pm.text);
	                let num = (localctx.n===null ? null : localctx.n.text);
	                if (!num.includes('.'))
	                    num += '.0';
	                localctx.value =  `vec2(${pm + num}, 0.0)`
	            
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	element() {
	    let localctx = new ElementContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, ComplexParser.RULE_element);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 164;
	        localctx.c = this.match(ComplexParser.CHAR);
	         localctx.value =  (localctx.c===null ? null : localctx.c.text) 
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


}

ComplexParser.EOF = antlr4.Token.EOF;
ComplexParser.T__0 = 1;
ComplexParser.T__1 = 2;
ComplexParser.T__2 = 3;
ComplexParser.T__3 = 4;
ComplexParser.T__4 = 5;
ComplexParser.T__5 = 6;
ComplexParser.T__6 = 7;
ComplexParser.T__7 = 8;
ComplexParser.T__8 = 9;
ComplexParser.T__9 = 10;
ComplexParser.T__10 = 11;
ComplexParser.T__11 = 12;
ComplexParser.T__12 = 13;
ComplexParser.T__13 = 14;
ComplexParser.T__14 = 15;
ComplexParser.T__15 = 16;
ComplexParser.T__16 = 17;
ComplexParser.T__17 = 18;
ComplexParser.T__18 = 19;
ComplexParser.T__19 = 20;
ComplexParser.NUMBER = 21;
ComplexParser.CHAR = 22;
ComplexParser.PLUS = 23;
ComplexParser.MINUS = 24;
ComplexParser.TIMES = 25;
ComplexParser.DIVIDE = 26;
ComplexParser.POW = 27;
ComplexParser.SQRT = 28;
ComplexParser.LEFT = 29;
ComplexParser.RIGHT = 30;
ComplexParser.LEFT_BRACE = 31;
ComplexParser.RIGHT_BRACE = 32;
ComplexParser.COMA = 33;
ComplexParser.SEMICOLON = 34;
ComplexParser.EQUALS = 35;
ComplexParser.PLOTTED_FUNC = 36;
ComplexParser.WS = 37;
ComplexParser.LATEX_WS = 38;

ComplexParser.RULE_parse = 0;
ComplexParser.RULE_assignment = 1;
ComplexParser.RULE_fractal = 2;
ComplexParser.RULE_addition = 3;
ComplexParser.RULE_multiplication = 4;
ComplexParser.RULE_fractionOrPower = 5;
ComplexParser.RULE_power = 6;
ComplexParser.RULE_atom = 7;
ComplexParser.RULE_num = 8;
ComplexParser.RULE_element = 9;

class ParseContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = ComplexParser.RULE_parse;
    }

	assignment() {
	    return this.getTypedRuleContext(AssignmentContext,0);
	};

	fractal() {
	    return this.getTypedRuleContext(FractalContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof ComplexListener ) {
	        listener.enterParse(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof ComplexListener ) {
	        listener.exitParse(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof ComplexVisitor ) {
	        return visitor.visitParse(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class AssignmentContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = ComplexParser.RULE_assignment;
        this.isPlot = null; // Token
        this.c = null; // ElementContext
        this.c1 = null; // ElementContext
        this.a = null; // AdditionContext
    }

	EQUALS() {
	    return this.getToken(ComplexParser.EQUALS, 0);
	};
